--- a/module1/SS5_html_form_table/thuc_hanh/SimpleForm.html
+++ b/module1/SS5_html_form_table/thuc_hanh/SimpleForm.html
@@ -33,9 +33,9 @@
     <input type="text" name="Lname" value="LastName" size="15"/> <br>
 
     <p>Email </p>
-    <input type="text" name="Email" value="" size="35"/>
+    <input type="text" name="Email" value="" size="35"/><br><br>
 
-    <p>Phone </p>
+    <labble>Phone </labble><br>
     <input type="text" name="phone1" value="" size="5"/> -
     <input type="text" name="phone2" value="" size="5"/> -
     <input type="text" name="phone3" value="" size="5"/><br>
