--- a/module1/SS5_html_form_table/bai_tap/ExerciseBasicForm1.html
+++ b/module1/SS5_html_form_table/bai_tap/ExerciseBasicForm1.html
@@ -61,7 +61,7 @@
 <body>
 <div style="width: 720px;height: 320px;margin-left: auto;margin-right: auto; padding: 10px 10px 10px 10px; background-color:aqua;border-radius: 5px;" >
 <div class="container">
-    <form name="hobbies" action="BaiTapBasicForm1.html" method="post">
+    <form name="hobbies" action="ExerciseBasicForm1.html" method="post">
         <h1> SỞ THÍCH CỦA BẠN</h1>
         <div class="row">
             <div class="col-25">
