--- a/module1/SS5_html_form_table/thuc_hanh/SimpleTable.html
+++ b/module1/SS5_html_form_table/thuc_hanh/SimpleTable.html
@@ -15,7 +15,7 @@
             text-align: left;
             padding: 8px;
         }
-        tr:nth-child(even) {
+        tr:nth-child(even)&& td:nth-child(odd) {
             background-color: #dddddd;
         }
     </style>
