--- a/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/BienKieuDuLieuToanTu1.html
+++ b/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/BienKieuDuLieuToanTu1.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 <script>
-    let inVatly = prompt("Nhập điểm môn Vật lý");
-    let inSinhhoc = prompt("Nhập điểm môn Sinh học");
-    let inHoahoc = prompt("Nhập điểm môn Hóa học");
+    let inVatLy = prompt("Nhập điểm môn Vật lý");
+    let inSinhHoc = prompt("Nhập điểm môn Sinh học");
+    let inHoaHoc = prompt("Nhập điểm môn Hóa học");
 
-    let Vatly = parseInt(inVatly);
-    let Sinhhoc = parseInt(inSinhhoc);
-    let Hoahoc = parseInt(inHoahoc);
+    let vatLy = parseInt(inVatLy);
+    let sinhHoc = parseInt(inSinhHoc);
+    let hoaHoc = parseInt(inHoaHoc);
 
-    let tong = Vatly + Sinhhoc + Hoahoc;
-    let trungbinh = (Vatly + Sinhhoc + Hoahoc)/3;
+    let tong = vatLy + sinhHoc + hoaHoc;
+    let trungBinh = (vatLy + sinhHoc + hoaHoc)/3;
 
-    document.write("Điểm trung bình 3 môn học là "+trungbinh);
+    document.write("Điểm trung bình 3 môn học là "+trungBinh);
     document.write("<br/>");
     document.write("Tổng Điểm 3 môn học là "+tong);
 
