--- a/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/BienKieuDuLieuToanTu2.html
+++ b/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/BienKieuDuLieuToanTu2.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    let indoC = prompt("Nhập Nhiệt độ bằng độ C");
+    let inDoC = prompt("Nhập Nhiệt độ bằng độ C");
 
-    let doC = parseInt(indoC);
+    let doC = parseInt(inDoC);
 
     let doF = (9*doC)/5 + 32;
 
