--- a/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/BienKieuDuLieuToanTu3.html
+++ b/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/BienKieuDuLieuToanTu3.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <script>
-    let inBankinh = prompt("Nhập bán kính đường tròn:");
+    let inBanKinh = prompt("Nhập bán kính đường tròn:");
 
-    let Bankinh = parseInt(inBankinh);
+    let banKinh = parseInt(inBanKinh);
 
 
-    let dientich = Math.pow(Bankinh,2)*Math.PI;
+    let dienTich = Math.pow(banKinh,2)*Math.PI;
 
-    document.write("Diện tích hình tròn có bán kính "+Bankinh + " là "+dientich);
+    document.write("Diện tích hình tròn có bán kính "+banKinh + " là "+dienTich);
     document.write("<br/>");
 </script>
 </body>
