--- a/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/BienKieuDuLieuToanTu4.html
+++ b/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/BienKieuDuLieuToanTu4.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <script>
-    let inBankinh = prompt("Nhập bán kính đường tròn:");
+    let inBanKinh = prompt("Nhập bán kính đường tròn:");
 
-    let Bankinh = parseInt(inBankinh);
+    let banKinh = parseInt(inBanKinh);
 
 
-    let chuvi = 2 * Bankinh * Math.PI;
+    let chuVi = 2 * banKinh * Math.PI;
 
-    document.write("Chu vi hình tròn có bán kính "+Bankinh + " là "+chuvi);
+    document.write("Chu vi hình tròn có bán kính "+banKinh + " là "+chuVi);
     document.write("<br/>");
 </script>
 </body>
