--- a/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/UngDungMayTinh.html
+++ b/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/UngDungMayTinh.html
@@ -18,44 +18,44 @@
 <script>
 
     function Addition() {
-        let inputa = document.getElementById("so_a").value;
-        let inputb = document.getElementById("so_b").value;
+        let inputA = document.getElementById("so_a").value;
+        let inputB = document.getElementById("so_b").value;
 
-        let a = parseFloat(inputa);
-        let b = parseFloat(inputb);
+        let a = parseFloat(inputA);
+        let b = parseFloat(inputB);
 
-        let Ketqua = a+b;
-        document.getElementById("result").innerHTML = "Result Addition: "+Ketqua;
+        let ketQua = a+b;
+        document.getElementById("result").innerHTML = "Result Addition: "+ketQua;
     }
     function Subtraction() {
-        let inputa = document.getElementById("so_a").value;
-        let inputb = document.getElementById("so_b").value;
+        let inputA = document.getElementById("so_a").value;
+        let inputB = document.getElementById("so_b").value;
 
-        let a = parseFloat(inputa);
-        let b = parseFloat(inputb);
+        let a = parseFloat(inputA);
+        let b = parseFloat(inputB);
 
-        let Ketqua = a-b;
-        document.getElementById("result").innerHTML = "Result Subtraction: "+Ketqua;
+        let ketQua = a-b;
+        document.getElementById("result").innerHTML = "Result Subtraction: "+ketQua;
     }
     function Multiplication() {
-        let inputa = document.getElementById("so_a").value;
-        let inputb = document.getElementById("so_b").value;
+        let inputA = document.getElementById("so_a").value;
+        let inputB = document.getElementById("so_b").value;
 
-        let a = parseFloat(inputa);
-        let b = parseFloat(inputb);
+        let a = parseFloat(inputA);
+        let b = parseFloat(inputB);
 
-        let Ketqua = a*b;
-        document.getElementById("result").innerHTML = "Result Multiplication: "+Ketqua;
+        let ketQua = a*b;
+        document.getElementById("result").innerHTML = "Result Multiplication: "+ketQua;
     }
     function Division() {
-        let inputa = document.getElementById("so_a").value;
-        let inputb = document.getElementById("so_b").value;
+        let inputA = document.getElementById("so_a").value;
+        let inputB = document.getElementById("so_b").value;
 
-        let a = parseFloat(inputa);
-        let b = parseFloat(inputb);
+        let a = parseFloat(inputA);
+        let b = parseFloat(inputB);
 
-        let Ketqua = a/b;
-        document.getElementById("result").innerHTML = "Result Division: "+Ketqua;
+        let ketQua = a/b;
+        document.getElementById("result").innerHTML = "Result Division: "+ketQua;
     }
 </script>
 
