--- a/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/UngDungMayTinhCach2.html
+++ b/module1/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/UngDungMayTinhCach2.html
@@ -19,25 +19,25 @@
     <script>
 
         function Calculate(Clicked_id) {
-            let inputa = document.getElementById("so_a").value;
-            let inputb = document.getElementById("so_b").value;
+            let inputA = document.getElementById("so_a").value;
+            let inputB = document.getElementById("so_b").value;
 
-            let a = parseFloat(inputa);
-            let b = parseFloat(inputb);
-            let Ketqua = 0;
+            let a = parseFloat(inputA);
+            let b = parseFloat(inputB);
+            let ketQua = 0;
 
             if (Clicked_id == "add") {
-                Ketqua = a + b
+                ketQua = a + b
             } else if (Clicked_id == "sub") {
-                Ketqua = a - b
+                ketQua = a - b
 
             } else if (Clicked_id == "mul") {
-                Ketqua = a * b
+                ketQua = a * b
 
             } else if (Clicked_id == "div") {
-                Ketqua = a / b
+                ketQua = a / b
             }
-            document.getElementById("result").innerHTML = "Result Division: " + Ketqua;
+            document.getElementById("result").innerHTML = "Result Division: " + ketQua;
 
         }
 
