--- a/module1/ss9_cau_truc_dieu_kien_2/bai_tap/cau_truc_dieu_kien_1/Bai4TimSoLonNhat3So.html
+++ b/module1/ss9_cau_truc_dieu_kien_2/bai_tap/cau_truc_dieu_kien_1/Bai4TimSoLonNhat3So.html
@@ -11,10 +11,12 @@
     let c = parseFloat(prompt("Mời nhập số c:"));
 
     let max = a;
-    if (max<b)
+    if (max<b){
         max = b;
-    if (max<c)
+    }
+    if (max<c){
         max = c;
+    }
     alert("Số lớn nhất là: "+max);
     
 
