--- a/module1/ss11_cau_truc_lap_2/bai_tap/HienThiSoNguyenTo.html
+++ b/module1/ss11_cau_truc_lap_2/bai_tap/HienThiSoNguyenTo.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<h2>Danh sách các số nguyên tố:</h2>
+<p id="demo"></p>
+
 </body>
+<script>
+
+</script>
 </html>
