--- a/module1/ss9_cau_truc_dieu_kien_2/bai_tap/cau_truc_dieu_kien_2/Bai7PhuongTrinhBac2.html
+++ b/module1/ss9_cau_truc_dieu_kien_2/bai_tap/cau_truc_dieu_kien_2/Bai7PhuongTrinhBac2.html
@@ -10,7 +10,8 @@
     let b = parseFloat(prompt("nhập b"));
     let c = parseFloat(prompt("nhập c"));
 
-    let nghiem1, nghiem2;
+    let nghiem1;
+    let nghiem2;
 
     let delta = b * b - 4 * a * c;
 
