--- a/module1/ss10_cau_truc_lap_1/thuc_hanh/SuDungVongLapFor2.html
+++ b/module1/ss10_cau_truc_lap_1/thuc_hanh/SuDungVongLapFor2.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let num = prompt("Enter your number: ");
+    let total = 0;
+    for (let i =0; i <= num; i++) {
+
+        total += i;
+    }
+    alert(total);
+
+</script>
 </body>
 </html>
