--- a/module1/ss10_cau_truc_lap_1/thuc_hanh/SuDungVongLapWhile1.html
+++ b/module1/ss10_cau_truc_lap_1/thuc_hanh/SuDungVongLapWhile1.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let num = 0;
+    let total = 0;
+
+    while( num != -1 ) {
+        num = parseInt(prompt("Enter a number: "));
+        alert(num);
+        total += num;
+    }
+    alert("Tổng các số đã nhập "+total);
+
+</script>
 </body>
 </html>
