--- a/module1/ss9_cau_truc_dieu_kien_2/bai_tap/cau_truc_dieu_kien_2/Bai10TinhGiaDien.html
+++ b/module1/ss9_cau_truc_dieu_kien_2/bai_tap/cau_truc_dieu_kien_2/Bai10TinhGiaDien.html
@@ -7,7 +7,8 @@
 <body>
 <script>
     let chiSoDien = parseFloat(prompt("Nhập vào chỉ số điện tiêu thụ Kwh:"));
-    let tienDienChuaThue, tienDienTinhThue;
+    let tienDienChuaThue;
+    let tienDienTinhThue;
 
     if (chiSoDien>400){
         tienDienChuaThue = (chiSoDien-400)*2927 + 100*2834 + 100*2536 + 100*2014 + 50*1734 + 50*1678;
