Loop Assignment 1 Lession 11

--- a/module1/ss11_cau_truc_lap_2/bai_tap/HienThiSoNguyenTo.html
+++ b/module1/ss11_cau_truc_lap_2/bai_tap/HienThiSoNguyenTo.html
@@ -21,18 +21,23 @@
     } else {
         while (count < quantity){
 
-            for (let i = 2; i<= Math.sqrt(number);i++){
-                if (number % i == 0){
+            for (let i = 2; i< number;i++){
+                if (number % i === 0){
                     demUoc++;
+                    break;
                 }
             }
-            if (demUoc == 0){
+
+            if (demUoc === 0){
                 count += 1;
                 displaySoNguyenTo += count+ ": " + number + "<br>";
             }
+
             demUoc = 0;
             number += 1;
+
         }
+
     }
     document.getElementById("songuyento").innerHTML = displaySoNguyenTo;
 
