--- a/module1/ss11_cau_truc_lap_2/bai_tap/luyen_tap_vong_lap_2/Bai6VeHinhTraiTim.html
+++ b/module1/ss11_cau_truc_lap_2/bai_tap/luyen_tap_vong_lap_2/Bai6VeHinhTraiTim.html
@@ -23,7 +23,7 @@
         }
 
         //Tao tam giac trong, de tao tiep 1 tam giac can
-        for (let k = duongCao / 3; k > i; k--) {
+        for (let a = duongCao / 3; a > i; a--) {
 
             document.writeln("&nbsp;&nbsp;");
         }
