--- a/module1/ss11_cau_truc_lap_2/bai_tap/BangCuuChuong.html
+++ b/module1/ss11_cau_truc_lap_2/bai_tap/BangCuuChuong.html
@@ -22,15 +22,16 @@
 <h1 align="center">Bảng cửu chương</h1>
 
 <script>
-    let bangCuuChuong, i, j,displayText;
+    let bangCuuChuong;
+    let displayText;
 
     bangCuuChuong = "<table>";
 
-    for (i = 1;i<=9;i++){
+    for (let i = 1;i<=9;i++){
 
         bangCuuChuong = bangCuuChuong + "<tr>";
 
-        for (j = 2;j<=9;j++){
+        for (let j = 2;j<=9;j++){
             displayText =j+ "x" +i+ "=" +j*i;
             bangCuuChuong = bangCuuChuong + "<td>" +displayText+ "</td>";
         }
