--- a/module1/ss13_mang_2/bai_tap/luyen_tap_mang_1/Bai5DemSoNguyenAmTrongChuoi.html
+++ b/module1/ss13_mang_2/bai_tap/luyen_tap_mang_1/Bai5DemSoNguyenAmTrongChuoi.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <script>
-    let str = prompt("Nhập vào một chuỗi dãy số nguyên, các số cách nhau bởi dấu ","");
+    let str = prompt('Nhập vào một chuỗi dãy số nguyên, các số cách nhau bởi dấu ,');
 
     let myArray = str.split(",");
+
     console.log(myArray);
 
     let count = 0;
