--- a/module1/ss13_mang_2/bai_tap/luyen_tap_mang_1/Bai7XoaPhanTuMang.html
+++ b/module1/ss13_mang_2/bai_tap/luyen_tap_mang_1/Bai7XoaPhanTuMang.html
@@ -6,20 +6,37 @@
 </head>
 <body>
 <script>
-    let str = prompt("Nhập vào một chuỗi dãy số nguyên, các số cách nhau bởi dấu ","");
 
-    let soNguyen = prompt("Nhập vào một số nguyên V");
 
-    let myArray = str.split(",");
+    let number;
+    let checking;
+    do {
+        number = prompt("nhâp vào độ dài của mảng");
+        checking = (parseInt(number)==number)&& number>0;
+    }while (!checking);
 
-    if (myArray.includes(soNguyen)) {
-        myArray.splice(myArray.indexOf(soNguyen), 1);
-        myArray.push(0);
-        alert("Mảng sau khi đã xóa phần tử V là: "+myArray);
+    number = parseInt(number);
+    let arr = new Array(number);
 
-    }else {
-        alert("Số nguyên V không nằm trong mảng ");
+    for (let i = 0; i <arr.length ; i++) {
+        arr[i] = parseInt(prompt("nhập phần tử thứ : " + i));
     }
+    alert("Mảng vừa nhập là:"+arr);
+
+
+    let soNguyen = parseInt(prompt("Nhập vào một số nguyên V cần xóa"));
+
+    for (let i = 0; i < arr.length; i++) {
+        if (arr[i]==soNguyen) {
+            for (let j = i; j < arr.length -1; j++) {
+                arr[j] = arr[j+1];
+            }
+            arr[arr.length -1] = 0;
+            i--;
+        }
+    }
+    alert("Mảng sau khi đã xóa phần tử V là: " + arr);
+
 
 </script>
 </body>
