--- a/module1/ss13_mang_2/bai_tap/luyen_tap_mang_2/Bai4DemSoTuTrongMotChuoi.html
+++ b/module1/ss13_mang_2/bai_tap/luyen_tap_mang_2/Bai4DemSoTuTrongMotChuoi.html
@@ -12,11 +12,11 @@
     str = str.replace(/\s+/g,' ').trim(); // loại bỏ tất cả các khoảng trắng thừa
 
     if (str == ""){
-        alert("SỐ ký tự trong chuỗi vừa nhập là 0");
+        alert("SỐ từ trong chuỗi vừa nhập là 0");
 
     }else {
         myArray = str.split(" ");
-        alert("SỐ ký tự trong chuỗi vừa nhập: " +myArray.length);
+        alert("SỐ từ trong chuỗi vừa nhập: " +myArray.length);
     }
 
 </script>
