--- a/module1/ss16_lap_trinh_huong_doi_tuong_1/BaiTap/XayDungLopHinhChuNhat.html
+++ b/module1/ss16_lap_trinh_huong_doi_tuong_1/BaiTap/XayDungLopHinhChuNhat.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="myCanvas" width="500px" height="400px" style="border:1px solid #d3d3d3;"></canvas>
+<canvas id="myCanvas"></canvas>
+
 <p id ="display"></p>
 <script>
     class Rectangle {
@@ -30,19 +31,20 @@
             this.chieuRong = chieuRong;
         }
 
-        drawOnCanvas() {
-
-            let rec = document.getElementById("myCanvas").getContext("2d");
-            rec.beginPath();
-            rec.rect(10, 10, this.chieuDai, this.chieuRong);
-            rec.stroke();
+        drawOnCanvas(canvas,x,y) {
+            let ctx = canvas.getContext("2d");
+            ctx.beginPath();
+            ctx.rect(x, y, this.chieuDai, this.chieuRong);
+            ctx.stroke();
         }
     }
 
     let displayText = "";
 
     let smallRectangle = new Rectangle(300, 100);
-    smallRectangle.drawOnCanvas();
+
+    let canvas1 = document.getElementById("myCanvas");
+    smallRectangle.drawOnCanvas(canvas1,0,0);
 
     smallRectangle.setChieuDai(400);
     smallRectangle.setChieuRong(150);
