--- a/module1/00_case_study/phan_3_mang_lap/Bai5DatThucUong.html
+++ b/module1/00_case_study/phan_3_mang_lap/Bai5DatThucUong.html
@@ -32,7 +32,7 @@
     }while (true);
 
     for (let i = 0; i <choosenDrink.length ; i++) {
-        result += "\n"+choosenDrink[i]+" số lượng: "+amountChoosen[i];
+        result += "\n"+choosenDrink[i]+" - số lượng: "+amountChoosen[i];
     }
     result += "\nTổng tiền hóa đơn là: "+total+ " nghìn đồng";
 
