--- a/module1/demo.html
+++ b/module1/demo.html
@@ -35,7 +35,9 @@
     // }
     //
     // alert(gradingStudents(37));
-
+    let a ="9";
+    let b = ('0' + a).slice(-2);
+    alert(b);
 </script>
 </body>
 </html>
