--- a/module1/ss17_lap_trinh_huong_doi_tuong_2/bai_tap/QuanLySanPhamOOP.html
+++ b/module1/ss17_lap_trinh_huong_doi_tuong_2/bai_tap/QuanLySanPhamOOP.html
@@ -37,7 +37,7 @@
         }
 
         input[type = "button"]:hover{
-            background: green;
+            background: darkgreen;
         }
         </style>
 
@@ -57,6 +57,7 @@
 
 </body>
 <script>
+
     class XeMay{
         constructor(bienKS, chuSoHuu, dungTich) {
             this.dungTich = dungTich;
